--- a/api/package.json
+++ b/api/package.json
@@ -15,6 +15,7 @@
     "http-errors": "~1.6.3",
     "jade": "^0.29.0",
     "morgan": "~1.9.1",
+    "node-cache": "^5.1.2",
     "puppeteer": "^13.3.2",
     "translate": "^1.4.1"
   },
