--- a/api/package.json
+++ b/api/package.json
@@ -12,11 +12,14 @@
     "debug": "~2.6.9",
     "dotenv": "^16.0.0",
     "express": "~4.16.1",
+    "express-api-cache": "^1.0.4",
     "http-errors": "~1.6.3",
     "jade": "^0.29.0",
     "morgan": "~1.9.1",
     "node-cache": "^5.1.2",
     "puppeteer": "^13.3.2",
+    "swagger-jsdoc": "^6.1.0",
+    "swagger-ui-express": "^4.3.0",
     "translate": "^1.4.1"
   },
   "devDependencies": {
